test production fixed image load and sidebar on mobile

--- a/src/components/products_fetcher/productsFetcher.css
+++ b/src/components/products_fetcher/productsFetcher.css
@@ -58,13 +58,18 @@
   margin-top: 1.5rem;
   line-height: 1.3;
 }
+.bga_product_img_wrapper {
+  width: 500px;
+  height: 350px;
+  background-color: red;
+}
 .bga_product_img {
   width: 500px;
   height: 350px;
   border-radius: var(--br-16);
-  margin-top: 7rem;
   border: 1px solid var(--border-color);
-  object-fit: cover;
+  object-fit: fit;
+  margin-top: 7rem;
 }
 
 /* =========================bga card section======================= */
