--- a/src/pages/inuse/inuse.css
+++ b/src/pages/inuse/inuse.css
@@ -2,7 +2,7 @@
   max-width: var(--max-width);
   width: var(--width-lg);
   margin: auto;
-  margin-top: 5cqmin;
+  margin-top: 50px;
 }
 
 .inuse_main {
@@ -30,23 +30,21 @@
 .inuse_main_header > b {
   color: var(--primary-color-500);
 }
-.inuse_main_logo_icon {
-}
 
-.examples_img {
-  max-width: 100%;
-  height: auto;
-  vertical-align: middle;
-  display: inline-block;
+.grid_wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(47%, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
 }
-
-.gird_wrapper > div {
+.wide {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   background-color: #fff;
   border-radius: var(--br-16);
+  aspect-ratio: 12/9;
 }
 
 .examples_img {
@@ -56,15 +54,7 @@
   border-radius: var(--br-16);
 }
 
-.gird_wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 10px;
-  grid-auto-rows: 200px;
-  grid-auto-flow: dense;
-}
-
-.gird_wrapper .wide {
+/* .gird_wrapper .wide {
   grid-column: span 2;
   grid-row: span 2;
 }
@@ -82,7 +72,7 @@
 .gird_wrapper .ultra_wide {
   grid-row: span 3;
   grid-column: span 5;
-}
+} */
 
 @media screen and (min-width: 200px) and (max-width: 480px) {
   .inuse_main {
@@ -116,13 +106,31 @@
     margin: auto;
     margin-top: 15px;
   }
-  .examples_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: var(--br-14);
-  }
-  .gird_wrapper .wide {
+
+
+  .grid_wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(80%, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+}
+.wide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: var(--br-12);
+  aspect-ratio: 12/9;
+}
+
+.examples_img {
+  width: 100%;
+  height: 100%;
+  object-fit: fit;
+  border-radius: var(--br-10);
+}
+  /* .gird_wrapper .wide {
     grid-column: span 2;
     grid-row: span 2;
   }
@@ -145,7 +153,7 @@
   .gird_wrapper .ultra_wide {
     grid-row: span 2;
     grid-column: span 2;
-  }
+  } */
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -180,13 +188,30 @@
     margin: auto;
     margin-top: 15px;
   }
-  .examples_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: var(--br-14);
-  }
-  .gird_wrapper .wide {
+
+  .grid_wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(80%, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+}
+.wide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: var(--br-12);
+  aspect-ratio: 12/9;
+}
+
+.examples_img {
+  width: 100%;
+  height: 100%;
+  object-fit: fit;
+  border-radius: var(--br-10);
+}
+  /* .gird_wrapper .wide {
     grid-column: span 2;
     grid-row: span 2;
   }
@@ -209,7 +234,7 @@
   .gird_wrapper .ultra_wide {
     grid-row: span 2;
     grid-column: span 2;
-  }
+  } */
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -241,13 +266,30 @@
     margin: auto;
     margin-top: 15px;
   }
-  .examples_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: var(--br-14);
-  }
-  .gird_wrapper .wide {
+
+  .grid_wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+}
+.wide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: var(--br-14);
+  aspect-ratio: 12/9;
+}
+
+.examples_img {
+  width: 100%;
+  height: 100%;
+  object-fit: fit;
+  border-radius: var(--br-12);
+}
+  /* .gird_wrapper .wide {
     grid-column: span 2;
     grid-row: span 2;
   }
@@ -270,7 +312,7 @@
   .gird_wrapper .ultra_wide {
     grid-row: span 2;
     grid-column: span 4;
-  }
+  } */
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
